monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0145/A0145a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0145;

grammar A0145a {

  Foo = "foo&";

  nokeyword "foo&";

}
